--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hogwarts Sorting Hat</title>
+  <title>Hogwarts Sorting Ceremony</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- พื้นหลังประกายดาว -->
   <div id="particles-js"></div>
+  <div class="overlay"></div>
 
   <div class="container">
-    <h1 class="title">Hogwarts Sorting Ceremony</h1>
+    <h1 class="title">⚡ The Hogwarts Sorting Ceremony ⚡</h1>
     <img src="images/sorting-hat.png" alt="Sorting Hat" class="hat">
 
     <input type="text" id="username" placeholder="Enter your name..." />
-    <button id="startBtn">Start Sorting</button>
+    <button id="startBtn">Begin the Sorting</button>
     
     <div id="result" class="result hidden"></div>
   </div>
